@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<<<<<<< HEAD
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.medical</groupId>
     <artifactId>medicare</artifactId>
+=======
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+<<<<<<< HEAD
+<<<<<<< HEAD
+    <groupId>org.example</groupId>
+    <artifactId>rendez-vous</artifactId>
+=======
+    <groupId>tn.esprit</groupId>
+    <artifactId>medicare</artifactId>
+>>>>>>> 4c2e9e5167ea8fb8860bdfe1259105a6c5337cae
+=======
+    <groupId>org.example</groupId>
+    <artifactId>obj</artifactId>
+>>>>>>> 520eef9b887f3ced5e22a24717b87e95f568ec52
+>>>>>>> d979f303caa21a822b59cacc687371f4edc760b5
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,6 +32,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+<<<<<<< HEAD
 
     <dependencies>
         <!-- Version différente qui marche mieux -->
@@ -37,6 +56,42 @@
             <artifactId>javafx-fxml</artifactId>
             <version>22.0.2</version>
         </dependency>
+=======
+<<<<<<< HEAD
+    <dependencies>
+<<<<<<< HEAD
+     <dependency>
+         <groupId>org.example</groupId>
+         <artifactId>rendez-vous</artifactId>
+         <version>1.0-SNAPSHOT</version>
+     </dependency>
+    </dependencies>
+</project>
+=======
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>21</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.2.1</version>
+        </dependency>
+
+>>>>>>> d979f303caa21a822b59cacc687371f4edc760b5
     </dependencies>
     <build>
         <plugins>
@@ -45,11 +100,19 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
+<<<<<<< HEAD
                     <mainClass>com.medical.Main</mainClass>
+=======
+                    <mainClass>tn.esprit.medicare.main.MainApp</mainClass>
+                    <options>
+                        <option>--add-modules javafx.controls,javafx.fxml</option>
+                    </options>
+>>>>>>> d979f303caa21a822b59cacc687371f4edc760b5
                 </configuration>
             </plugin>
         </plugins>
     </build>
+<<<<<<< HEAD
     <!-- ⬇️ AJOUT : source pour trouver le plugin JavaFX ⬇️ -->
     <pluginRepositories>
         <pluginRepository>
@@ -59,3 +122,20 @@
     </pluginRepositories>
 
 </project>
+=======
+</project>
+
+>>>>>>> 4c2e9e5167ea8fb8860bdfe1259105a6c5337cae
+=======
+
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+    </dependencies>
+
+</project>
+>>>>>>> 520eef9b887f3ced5e22a24717b87e95f568ec52
+>>>>>>> d979f303caa21a822b59cacc687371f4edc760b5
